<resources>
    <string name="app_name">multi-select-dialog</string>
    <string name="dialog_done_text">Save</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="list_empty">No items to display</string>
    <string name="select_entry">Select Entries</string>
    <string name="validation_text">Please select atleast one option</string>
    <string name="please_select_atleast">Please select atleast </string>
    <string name="you_can_only_select_upto">You can only select upto </string>
    <string name="option"> option</string>
    <string name="options"> options</string>
    <string name="select_all">select all</string>
    <string name="de_select_all">deselect all</string>
</resources>
