<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboard_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/addButton"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/select_entry"
            android:textColor="#212121"
            android:textSize="@dimen/font_size_heading" />

        <!--<TextView
            android:id="@+id/addButton"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/drawable_blue_follow"
            android:gravity="center"
            android:text=" New "
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_size_heading" />-->

        <TextView
            android:id="@+id/addButton"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:background="@drawable/drawable_blue_follow"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text=" New "
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/text_button_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_marginEnd="20dp">


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:indeterminateTint="@color/option_selected"
            android:progressTint="@color/option_selected"
            style="?android:attr/progressBarStyleSmall"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_border_gray"
            android:clickable="true"
            android:focusable="true"
            android:layout_toStartOf="@+id/progress"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint="Type name here"
            android:inputType="textMultiLine"
            android:minHeight="40dp"
            android:paddingStart="22dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/addLabel"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="2dp"
            android:background="@color/dashboard_bg"
            android:fontFamily="@font/poppins"
            android:text="  Name  "
            android:textColor="@color/dark_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/addError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addName"
            android:fontFamily="@font/poppins"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:text="Please provide name."
            android:textColor="@color/errorColor"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:background="@color/border_color" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:background="@drawable/edit_text_border_gray"
        android:iconifiedByDefault="true"
        android:tooltipText="Search"
        android:queryHint="Search" />

    <LinearLayout
        android:id="@+id/select_all_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/colorAccent"
            android:clickable="false" />

        <TextView
            android:id="@+id/select_all_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/textview_margin"
            android:layout_marginLeft="@dimen/textview_margin"
            android:text="@string/select_all"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_subheading" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginStart="@dimen/line_margin"
        android:layout_marginTop="@dimen/recyclerview_margin"
        android:layout_marginEnd="@dimen/line_margin"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:background="@color/colorPrimary"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <view
            android:id="@+id/recycler_view"
            class="xravelin.com.mutli_select_dialog.RecyclerViewEmptySupport"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/list_empty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textSize="@dimen/font_size_normal" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:background="@color/border_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/done"
            android:background="@drawable/cancel_button"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/dialog_cancel_text"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/text_button_size" />

        <TextView
            android:id="@+id/done"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/login_button"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/dialog_done_text"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/text_button_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_gravity="bottom"
        android:background="@color/green_light" />
</LinearLayout>